--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,7 @@ openvpn_port: 1194
 openvpn_proto: udp
 openvpn_dev: tun
 openvpn_server: 10.8.0.0 255.255.255.0
+openvpn_subnet: 10.8.0.0/24
 openvpn_bridge: {}
 openvpn_max_clients: 100
 openvpn_log: /var/log/openvpn.log
