--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -75,6 +75,11 @@ openvpn_use_ldap: false
 openvpn_ldap_tlsenable: 'false'
 openvpn_ldap_follow_referrals: 'false'
 
+# LDAP customized configurations
+openvpn_ldap_uri: ldap://localhost:389
+openvpn_ldap_crt: /etc/ssl/ldap-client.crt
+openvpn_ldap_key: /etc/ssl/ldap-client.key
+
 # Use simple authentication (default is disabled)
 openvpn_simple_auth: false
 openvpn_simple_auth_password: ""
